# code_example

ODE_NN/: ODE_NN.ipynb
ROOT_Macro_shell/: example.C  run.sh
Script/: ana_xy_map.py  pattern.root  plot.C  plot_neuron.py  plot_spike.C  plot_syn.C  plot_syn.py  plot_tmplt_pattern.py  plot_xy_S_in2fe.py  print.py  print1.py  print2.py  print3.py  print4.py  print5.py  print6.py  print_hyp.py
bashrc/: Xdefaults  bash_profile_sphnx  init.vim  mybashrc  mybashrc_Bell  mybashrc_NEW_PC  mybashrc_bell  mybashrc_brown  mybashrc_cms  mybashrc_desktop  mybashrc_gilbreth  mybashrc_halstead  mybashrc_local  mybashrc_negishi  mybashrc_opc  mybashrc_xps  vimrc
c++/: 2D_array.C  copy_pointer_in_a_function.C  define.C  equal_range.C  erase.C  euler_method_diff_eq.C  find_all_max_element_in_a_vector_of_pairs.C  find_if_with_pair.C  find_vector_element.C  friend.C  fstream.C  function_as_input_to_another_function.C  gaus_rand.C  get_line.C  inheritance.C  lambda_expression.C  loop_via_ifstream.C  map.C  multi_map.C  namespace.C  normal_random.C  oo  oo.C  operator_keyword.C  out  out0  out1  override.C  pass_2D_array.C  passing_by_pointer.C  plot.C  pointer_reference.C  progress_bar_1.C  pthread.C  queue.C  queue_and_reference_and_pointer_to_pointer.C  recursion.C  recursion_2.C  recursion_3.C  recursion_4.C  (+21 more)
c++/cmake_example/example_1/: CMakeLists.txt
c++/cmake_example/example_2/: CMakeCache.txt  CMakeLists.txt  G__Event.cxx  Makefile  cmake_install.cmake  libEvent.rootmap  libEvent_rdict.pcm
c++/optimization/: README  example  example.C  example_optimized_O0  example_optimized_O1  example_optimized_O2  example_optimized_O3  example_optimized_Os  run
config/: my_bashrc  my_vimrc
crab/: Dfinder.cc  crab_PbPb_MC.py  readme  readme_Dfinder_setup.txt  runForestAOD_pponAA_DATA_103X_onlyDfinder_withlist1.py
cuda_exmaple/example_1/: add  add.cpp  add_2.cu  add_3.cu  add_4.cu  add_grid_1.cu  add_grid_2  add_grid_2.cu  atomicadd.cu  cudaMemcpy_example.cu  cuda_std_thread.cu  find_max.cu  out  run
cuda_exmaple/example_2/: CMakeLists.txt  README  run.C
cuda_exmaple/example_2/Source/: CMakeLists.txt  LinkDef.h  add.cu  add.h  add_thread.cu  add_thread.h  common.cu  common.h  ttt.C  ttt.h
cuda_exmaple/example_2/lib/: libttt_rdict.pcm
eigen_linear_algebra/: README  mm.py  oo.C  run
evtgen_py8/: Makefile  Makefile.inc  README  main48.cc  setupEvtGen.sh  setupEvtGen_halstead.sh  setupEvtGen_itap.sh
openCL/: compile_test  test.cpp
openCL/HandOnOpenCL/Exercise08/C/: Makefile  matmul.c
openCL/HandOnOpenCL/Exercise08/Cpp/: Makefile  matmul.cpp
openCL/HandOnOpenCL/Exercise08/Python/: helper.py  matmul.py
openCL/HandOnOpenCL/Exercise09/: pi_ocl.cl
openCL/HandOnOpenCL/Exercise09/C/: .Makefile.swp  Makefile  pi_ocl.c
openCL/HandOnOpenCL/Exercise09/Cpp/: Makefile  pi_ocl.cpp
openCL/HandOnOpenCL/Exercise09/Python/: pi_ocl.py
python/: example_py.py  example_py_cy.py  get_var_value_from_name.py  helloworld.py  hyperopt_example.py  importlib.py  importlib_example.py  modulelib_example.py  ray_tune.py  repeated_K_fold.py  setup.py  unbuffered.py
python/MPI/: bcast_reduce.py  run_bell  run_halstead  test.py  test_bell.sub  test_halstead.sub
python/__init__py/: readme  run.py
python/__init__py/example/: __init__.py  run.py  t1.py
python/__init__py/example/example2/: t2.py
python/argparse/: logger.py  oo.py
python/cythan/: run
python/decorator/: e1.py  e2.py  e3.py  e4.py  e5.py  e6.py  readme
python/decorator_Brian2/: README  cpp_decorator.py  eigen.py  mm.py  namespace.cpp  namespace.h  oo.py  spike_rate.cpp  test_get_matrix_from_synapse_and_normalize.py  test_namespace.py
python/dunder_etc/: 1.py  2.py  readme
python/inheritance/: call_parent_once_only.py  classmethod.py  classmethod_staticmethod.py
python/jinja2/: 2.py  example.py  simple_example.py
python/jinja2/template/: 1.tmpt  2.tmpt  3.tmpt  4.tmpt  5.tmpt
python/load_mnist/: load.py  load_from_TF.py  load_from_sklearn.py
python/pyROOT/: README  dict.C  gabor_filter.py  nt.C  read_ntuple.C  test.C  test.py  tree_with_vector.py  vector_tuple.py
python/py_in_shell/: file.py  oo.sh
python/ray.train/: any_input.py  example_custom.py  example_pyTorch.py  example_pyTorchLightning.py  ray_wait.py
python/ray.train/ray_wait/: example2.py
python/ray.tune/: README  resume_from_a_finished_run.py  submit_ray_cluster.sh
python/ray.tune/AxSearch/: .example.py.swp  example.py
python/ray.tune/BayesOpt/: README  example.py
python/ray.tune/HEBOSearch/: example.py
python/ray.tune/Optuna/: example.py
python/ray.tune/SkoptSearch/: example.py
python/ray.tune/hyperopt/: example.py  resume_from_a_not_finished_run.py
python/setup_py/example_project/: README  setup.py
python/setup_py/example_project/example2022.egg-info/: PKG-INFO  SOURCES.txt
python/setup_py/example_project/example_test_project/: example.py
python/transformer/: position_encoding.py
shell_command/: un_purge.sh  userful_shell_command
toyADC/: adc.C
vscode/gemini/: settings.json
